--- a/site/estilo.css
+++ b/site/estilo.css
@@ -2,6 +2,7 @@
             margin-left: 160px;
             margin-right: 10%;
             margin-bottom: 1000px;
+            color: #333333;
         }
         h1{
             color: #009000;
@@ -12,7 +13,7 @@
             text-decoration-style: dotted;
             color: #009000;
         }
-        h1 a:hover{ color: #27201a; }
+        h1 a:hover, #by{ color: #27201a; }
 
         #p1{margin: 0 100px 0 200px; font-size: 1.5em; font-weight: 600;}
 
@@ -31,7 +32,6 @@
         }
     	.container p{
     		float: left;
-    		color: black; 
     		width: 33.3333%;
          /* border: solid #888888; */
     		padding: 15px;
@@ -51,9 +51,6 @@
             text-align: right;
 
             position: relative;
-        }
-        section{
-            font-family: sans-serif;
         }
 
         .menu a:link, .menu a:visited{
@@ -84,7 +81,7 @@
         }
         section{
             font-size: 1.1em;
-            font-family: arial;
+            font-family: sans-serif;
             text-align: justify;
         }
         img{
@@ -114,5 +111,7 @@
             width: 100%;
             font-size:1em;
             }
+            #by{font-size:1em;}
             #p1{margin: 0 100px 0 200px; font-size: 1.6em;}
+            hr:after{top: -20px;}
         }
