--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -1,7 +1,7 @@
 * {
   box-sizing: border-box;
 }
-body{font-family: Arial, Helvetica, sans-serif;}
+body{font-family: 'Brush Script MT', cursive, sans-serif;}
 
 h1 {
   margin-bottom: 15px;
@@ -11,24 +11,25 @@ h1 {
 
 .item {
   position: relative;
-  height: 150px;
+  height: 155px;
   font-size: 1em;
   border: 1px solid black;
   background-color: #ffa500;
   margin: 20px 10px 20px 10px;
   padding: 40px 10px 5px 10px;
+  overflow: hidden;
 }
 
 .title{
   width: 130px;
   font-size: 1.25em;
-  border-left: 1px solid black;
-  border-bottom: 1px solid black;
+  border: 1px solid black;
   padding: 3px;
   text-align: center;
   position: absolute;
   top: 0;
   right: 0;
+  margin: -1px;
 }
 
 #Chicken{background-color: #ffaaaa;}
